# Macbook_Battery_Alert_Monitor

./: .coveragerc  .gitignore  .releaserc.json  BUILD_FROM_SOURCE.md  BatteryAlert.icns  CHANGELOG.md  CONTRIBUTING.md  GPG_GUIDE.md  LICENSE  PRIVACY.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  RELEASE_DRAFT.md  SUPPORT.md  VERIFY.md  battery_alert_gui.py  build.sh  create_dmg.sh  create_icon.py  generate_social_preview.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  shenoylabs.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-version.yml  ci.yml  commitlint.yml  dependency-review.yml  post-release-verify.yml  release-build.yml  release.yml  semantic-release-dry-run.yml  (+2 more)
Casks/: battmon.rb
Formula/: battery-alert.rb
assets/: dmg_background.py  install_battmon.html
docs/: release-qa-checklist.md  release-runbook.md  support-triage-guide.md
scripts/: bump_version.sh  checks.sh  dispatch_release_build.py  fix_indentation_and_conflicts.py  generate_checksums.sh  generate_release_manifest.py  generate_release_notes.py  gpg_sign_release.sh  release_smoke_test.py  run_pre_release_checks.py  semantic_prepare.py  ship_checklist.py  update_cask.sh  verify_published_release.py  verify_release_artifacts.py
tests/: test_alert_logic.py  test_artifact_integrity.py  test_battery.py  test_config.py  test_fix_indentation_and_conflicts.py  test_imports.py  test_phase1_reliability.py  test_pre_release_checks.py  test_release_smoke.py  test_release_tooling.py  test_rumps_fallback.py
(+11 files in other folders)
