[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battmon-macos"
version = "1.1.2"
description = "Lightweight battery alert monitor for macOS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "rumps>=0.4.0; platform_system == 'Darwin'",
    "pyobjc-framework-Cocoa>=10.0; platform_system == 'Darwin'",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "pip-audit>=2.0",
    "pyinstaller>=6.15.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
